# QuTip_Extension

./: README.md  pyproject.toml  qobjevo_compiled_coeff_22539480803150.py  requirements.txt  setup.py  simulator.ipynb
.ipynb_checkpoints/: LICENSE-checkpoint  simulator-checkpoint.ipynb
experiments/: analysis.py  demo.py  nm_dynamics_learning.py
experiments/results/: N_1_t_pulse_1.0_delta_0.02_no_samples_1_t_pulse_1.0.pickle  N_1_t_pulse_10.0_delta_0.02_no_samples_1.pickle  N_1_t_pulse_10.0_delta_0.02_no_samples_1_t_pulse_10.0.pickle  N_1_t_pulse_100.0_delta_0.02_no_samples_1.pickle  N_1_t_pulse_100.0_delta_0.02_no_samples_25_t_pulse_100.0.pickle  N_1_t_pulse_100.0_delta_0.02_no_samples_5_t_pulse_100.0.pickle  N_2_t_pulse_100.0_delta_0.02_no_samples_25_t_pulse_100.0.pickle
qutipext/: __init__.py  hamiltonian_extension.py  utils.py
qutipext.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
